k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: integrator-inventory
spec:
  selector:
    app: integrator-inventory
  ports:
    - port: 80
      targetPort: 5000
  type: NodePort
